# Quintet_DBMS

./: README.md  cleanup.py
backend/: .gitignore  README.md  pyproject.toml  seed.py  update_content.py
backend/app/: database.py  main.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  content.py  course.py  course_topic.py  enrollment.py  instructor.py  student.py  textbook.py  textbook_used.py  topic.py  university.py  user.py
backend/app/routers/: admin.py  analyst.py  auth.py  content.py  courses.py  instructors.py  students.py
backend/app/schemas/: course.py  enrollment.py  user.py
backend/app/services/: analyst_service.py  auth_service.py  course_service.py  enroll_service.py
backend/app/tests/: test_courses.py
frontend/: README.md  hello.txt  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/dashboard/: page.tsx
frontend/app/admin/login/: page.tsx
frontend/app/analyst/dashboard/: page.tsx
frontend/app/analyst/login/: page.tsx
frontend/app/courses/[id]/: page.tsx
frontend/app/instructor/dashboard/: page.tsx
frontend/app/instructor/login/: page.tsx
frontend/app/student/dashboard/: page.tsx
frontend/app/student/login/: page.tsx
frontend/app/student/signup/: page.tsx
frontend/components/: dashboard-shell.tsx  features-section.tsx  footer.tsx  hero-section.tsx  navbar.tsx  quintet-logo.tsx  role-cards.tsx  theme-toggle.tsx
frontend/lib/: api.ts  auth-context.tsx
presentation/: Quintet_DBMS_Presentation.pptx  create_ppt.py
